      module apparently hangs G5s (closes: #251089).
  * Joshua Kwan
    - Since Discover doesn't grok SBUS yet, load sunhme in the manual
      module loading section because most sparc32 machines have either
      lance (built-in) or HME network connections.
    - To this effect, add a simple archdetect-sparc-linux.c. It will
      certainly have use later.

 -- Per Olofsson <pelle@dsv.su.se>  Wed, 26 May 2004 22:28:32 +0200

ddetect (0.99) unstable; urgency=low

  * Per Olofsson
    - When generating PCMCIA network card device names, also put them in
      /etc/network/devhotplug.
    - Check /sys for Cardbus cards on 2.6 kernels and add them to
      devhotplug.
  * Joey Hess
    - register-module ide-generic for 2.6 kernels. Fixes ide-cds on
      scsi systems with 2.6 kernels. Closes: #251050

 -- Petter Reinholdtsen <pere@debian.org>  Wed, 26 May 2004 17:09:35 -0300

ddetect (0.98) unstable; urgency=low

  * Per Olofsson
    - Only ask whether PCMCIA should be started once. Closes: #250285.
    - Install /etc/pcmcia/config.opts using prebaseconfig.
    - Queue Cardbus modules if they are not available, so that we can still
      catch their hotplug events and add them to /etc/network/devhotplug.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by George Papamichelakis
    - Basque (eu.po) by Piarres Beobide Egaña
    - Albanian (sq.po) by Elian Myftiu

 -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:58:05 +0200

ddetect (0.97) unstable; urgency=low

  * Per Olofsson
    - Added question about PCMCIA resource range options.
  * Joshua Kwan
    - Refine our PCMCIA heuristic on 2.6 by checking for the existence of
      any directories in /sys/class/pcmcia_socket. Thanks Russell King
      <rmk+pcmcia@arm.linux.org.uk>.
    - Try hard to only apt-install pcmcia-cs and generate PCMCIA devnames
      once.
  * Bastian Blank
    - hw-detect-full enhanced hw-detect.
  * Joey Hess
    - Ignore errors loading the ide-cd module, which can happen