@@ -14,6 +14,9 @@ ddetect (0.100) UNRELEASED; urgency=low
       lance (built-in) or HME network connections.
     - To this effect, add a simple archdetect-sparc-linux.c. It will
       certainly have use later.
+  * Joey Hess and Christian Perrier
+    - Add support for firewire CDs, including scsi bus rescanning for 2.4
+      kernels.
 
  -- Per Olofsson <pelle@dsv.su.se>  Wed, 26 May 2004 22:28:32 +0200
 
